# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

typemaps = [
  "//components/autofill/content/common/autofill_types.typemap",
  "//components/chrome_cleaner/public/typemaps/chrome_prompt.typemap",
  "//components/content_settings/core/common/content_settings.typemap",
  "//components/leveldb/leveldb.typemap",
  "//components/nacl/common/nacl.typemap",
  "//components/password_manager/content/common/credential_manager.typemap",
  "//components/signin/public/interfaces/account_id.typemap",
  "//components/spellcheck/common/spellcheck.typemap",
  "//components/translate/content/common/translate.typemap",
]
